--- a/Capitulos/cap1.tex
+++ b/Capitulos/cap1.tex
@@ -1,4 +1,4 @@
-\chapter{Perspectivas}
+\chapter{Orientaciones generales}
 
 En este capítulo se indaga en las perspectivas que dieron origen a la mecánica estadística y se habla de la propuesta dada por E.T Jaynes. Primero, haciendo un recorrido histórico para situar el nacimiento de la mecánica estadística en un contexto sencillo de seguir. Después se exploran los punto de vista de Gibbs y Boltzmann de manera explícita. Viendo las dificultades que trae consigo cada propuesta. También se expondrá qué implicaciones tiene la hipótesis de ergodicidad. Finalizando este capítulo se verá una propuesta más actual entregada por E.T Jaynes.
 
@@ -57,7 +57,8 @@ Botlzmann en 1868 generalizó el resultado de Maxwell, ahora se tiene la misma s
 f(x,y,z,u,v,w) \Delta \tau = \alpha e^{-\beta E} \Delta \tau.
 \end{equation}
 $E$ es la energía total que tiene la molécula esto es la energía cinética, energía potencial interna y energía potencial externa. Esta generalización es llamada la distribución de Maxwell-Boltzmann. Boltzmann además mostró que cualquier otra distribución bajo la condición de colisiones entre partículas evoluciona hacía la distribución de Maxwell-Boltzmann, Boltzmann usó el teorema H para concluir esto.
-\section{Boltzmann}
+\section{Fundamentos de la Mecánica Estadística}
+
 En este contexto histórico fue que Boltzmann dio las primeras ideas sobre la mecánica estadística. En esta sección, se expondrán los conceptos más importantes que Boltzmann postuló y ayudaron a formar la física estadística. La meta de Boltzmann era poder dar un enfoque microscópico de la termodinámica, y poder explicar las propiedades térmicas que se observaban en los sistemas macroscópicos. Como primera conexión intentó darle un significado microscópico a la segunda ley de la termodinámica. Esta conexión viene demostrada por el teorema H.
 \\
 Para hablar sobre teorema H primero se debe explicar la ecuación de transporte de Boltzmann. La ecuación de transporte de Boltzmann puede ser derivada desde la jerarquía de Bogoliubov-Born-Green-Kirkwood-Yvon o mirando el problema del número de partículas en un rango del estado de una molécula en el espaico de fase \cite{HuangStat}. Para ambas rutas se debe hacer supuestos para poder seguir con el análisis, esto no se mostrará acá dado que no es pertinente seguir todos los pasos. La ecuación de transporte de Boltzmann describe cómo la distribución de moléculas $f(\vec{r},\vec{p},t)$, donde $\vec{r}$ es la posición y $\vec{p}$ es el momento,  evoluciona en el tiempo. La ecuación es 	
@@ -182,7 +183,7 @@ Aquí se ha definido la función de partición $Z(\beta)$ como la normalización
 \end{equation}
 Históricamente se escogió la entropía de Gibbs porque da este resultado para un sistema a temperatura $T$.
 \\
-\section{Teorma de Liouville }
+\section{Teorema de Liouville }
 Construyendo sobre las ideas de Gibbs, se puede encontrar el teorema de Liouville. Este teorema tiene mucha importancia en la mecánica estadística, para ver sus consecuencias en esta área primero se verá qué declara este teorema. La siguiente demostración del teorema sigue los pasos dados por \cite{PathriaStat}. 
 \\
 Se considera un volumen $\Gamma$ que encierra una región que se quiere estudiar en el espacio de fase,  este volumen tiene una superficie $\sigma$. El cambio del número de puntos, microestados posibles del sistema, dentro de este volumen está dado por 
