--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -1,10 +1,19 @@
 \chapter{El Entrelazamiento y La Mecánica Estadística} \label{cap:2}
 
+La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos \cite{CallenThermo}. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas . Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos \cite{TodaStat}. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
+\\
+La mecánica estadística tiene como base el postulado de probabilidades iguales; este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al comparar sus resultados teóricos con los experimentales, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han podido ser unificados. 
+\\
+En este capítulo se seguirá Popescu et al  \cite{Popescu2006} y mostrar una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico. Al poner el entrelazamiento cuántico como nuevo cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad, gracias a esto se puede ver un fundamento más claro y sólido. 
+\\
+Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
+\\
 \section{Herramientas de la Teoría Cuántica}
-La mecánica cuántica en general se introduce desde la perspectiva del vector de estado, sus aplicaciones abarcan una gran cantidad de problemas. Sus herramientas son poderosas para algunos problemas, pero no siempre es sencillo poder seguir con este formalismo en casos particulares. Por esto se usa el formalismo de la matriz densidad u operador densidad cuando se habla de un sistema compuesto por un subsistema y su ambiente. Debido al entrelazamiento que existe ente el subsistema y su ambiente no se puede especificar un estado individual para el subsistema, las herramientas proporcionadas por el operador densidad permite representar las estadísticas de las medidas de uno de los componentes del sistema \cite{Decoherence}.
+Para poder ver las herramientas que la teoría de la información cuántica provee; se debe entender el formalismo del operador densidad. En esta sección, primero se mostrará la definición del operador densidad para luego seguir profundizando en el operador de densidad reducido, y finalizar con una subsección sobre la distancia de traza. La distancia de traza, será de gran importancia cuando se quiera especificar que tan lejos dos estados cuánticos están el uno del otro. \\
+La mecánica cuántica en general se introduce desde la perspectiva del vector de estado. Las aplicaciones de este formalismo abarcan una gran cantidad de problemas. Las herramientas entregadas por el vector de estado son poderosas para algunos problemas, pero no siempre es sencillo poder seguir con este formalismo en casos particulares; es por esto que se usa el formalismo de la matriz densidad u operador densidad, cuando se habla de un sistema compuesto por un subsistema y su ambiente. Debido al entrelazamiento que existe ente el subsistema y su ambiente no se puede especificar un estado individual para el subsistema, las herramientas proporcionadas por el operador densidad permite representar las estadísticas de las medidas de uno de los componentes del sistema \cite{Decoherence}. Es pertinente conocer estas herramientas antes de hablar sobre el artículo de Popescu et al.
 \\
 \subsection{Operador de Densidad}
-Como se sabe cuánticamente el estado $\ket{\psi}$ da toda la información posible de un sistema, a esto se le llama un estado puro. Para especificar cuál es el operador densidad de un sistema se supone que el sistema cuántico puede estar en $\ket{\psi_{i}}$ para $i=1,2,...$. Cada estado posible del sistema tiene una probabilidad correspondiente, $p_{i}>0$ y $\sum_{i} p_{i}$. Luego el operador densidad para el sistema es :
+Para comprender qué es el operador de densidad se debe empezar por responder cuándo se tiene el máximo conocimiento posible de un estado cuántico. Cuánticamente si el estado $\ket{\psi}$ da toda la información posible de un sistema se le llama un estado puro. Para especificar cuál es el operador densidad de un sistema se supone que el sistema cuántico puede estar en un estado puro, $\ket{\psi_{i}}$ para $i=1,2,...$. Cada estado posible del sistema tiene una probabilidad correspondiente, $p_{i}>0$ y $\sum_{i} p_{i}$. Luego el operador densidad para el sistema es :
 \begin{equation}
 \rho \equiv \sum_{i} p_{i} \ket{\psi_{i}}\bra{\psi_{i}}.
 \end{equation}
@@ -45,7 +54,7 @@ Los operados $\{  M_{m} \}$ satisfacen,
 \\
 Estos son los postulados de la mecánica cuántica desde la perspectiva del operado densidad, estos postulados son análogos a la perspectiva del vector de estado. Pero se debe ver un poco más en detalle el postulado 3, este habla sobre las mediciones cuánticas pero con mayor generalidad. Habitualmente al introducir la mecánica cuántica solo se habla de medidas proyectivas, estas medidas tienen muchas restricciones y no abarcan todas las posibilidades de medición.
 \\	
-Se puede demostrar que las mediciones proyectivas junto con los demás axiomas de la cuántica son semejantes a las medidas generales \cite{NielsenInformation}, entonces si existe una equivalencia entre estos dos tipos de mediciones, ¿  por qué preocuparse por un esquema más general?. Porque las mediciones generales no tienen tantas restricciones como las medidas proyectivas, esto da una variedad de propiedades que las medidas proyectivas no tienen. Además en algunos problemas que conciernen a la teoría cuántica de la información, es necesario usar mediciones generales, como por ejemplo la manera óptima de distinguir entre un conjunto de estados cuánticos.
+Se puede demostrar que las mediciones proyectivas junto con los demás axiomas de la cuántica son semejantes a las medidas generales \cite{NielsenInformation}, entonces si existe una equivalencia entre estos dos tipos de mediciones, ¿  por qué preocuparse por un esquema más general? Porque las mediciones generales no tienen tantas restricciones como las medidas proyectivas. Esto da una variedad de propiedades que las medidas proyectivas no tienen. Además en algunos problemas que conciernen a la teoría cuántica de la información es necesario usar mediciones generales, como por ejemplo la manera óptima de distinguir entre un conjunto de estados cuánticos.
 \\
 Pero hay una ventaja que tienen  la mediciones generales sobre las proyectivas, es lo que se nombra como \textit{repetibilidad}. Las medidas proyectivas tienen repetibilidad, puesto que si se tiene un estado inicial $\ket{\psi}$. Al hacer la primera medida se encuentra que $\ket{\psi_{m}}=\frac{P_{m}\ket{\psi}}{\sqrt{\bra{\psi}P_{m}\ket{\psi}}}$. Operando otra vez a $\ket{\psi_{m}}$ con $P_{m}$, el estado no cambia entonces $\bra{\psi_{m}}P_{m}\ket{\psi_{m}}=1$, esto significa que si se repite la medición muchas veces se seguirá en el mismo estado \cite{VedralInformation}. Pero esto no es cierto para todos los experimentos. Si se está haciendo el experimento de la doble rendija y se quiere saber la posición de un fotón luego de pasar y eso se hace por medio de una placa, después de encontrar la posición del fotón no se puede volver a hacer una medición  sobre ese fotón. Entonces por esto se debe recurrir en ciertos casos a las mediciones generales. De esta mediciones generales hay un caso particular que es usado en la teoría cuántica de la información, este caso se llama medidas POVM (Positive Operator-Valued Measure). Estas medidas sirven cuando solo se quiere saber las probabilidades de que un resultado salga sin darle importancia a cuál sea el estado del sistema después de la medida \cite{NielsenInformation}.
 Por el postulado 3 se sabe que la probabilidad de que el resultado m salga viene dado por $p(m)= \Tr (M^{\dagger}_{m}M_{m} \rho)$. Si se define :
@@ -53,10 +62,12 @@ Por el postulado 3 se sabe que la probabilidad de que el resultado m salga viene
 E_{m} \equiv M^{\dagger}_{m}M_{m}.
 \end{equation}
 Se puede demostrar fácilmente que $E_{m}$ es un operador positivo y cumple con $\sum_{m} E_{m}=I$. El conjunto completo de $ \{ E_{m}\}$ se conoce como POVM, y cada $E_{m}$ es un elemento asociado a POVM. Las mediciones proyectivas hacen parte de POVM, sea $P_{m}$ un proyector tal que $P_{m}P_{n}= \delta_{mn}P_{m}$ y $\sum_{m}P_{m}=I$. Solo para este caso los elementos POVM son los mismos que los operadores de medición, ya que $E_{m}=P_{m}^{\dagger}P_{m}=P_{m}$.
+\\
+Esta manera más general de mediciones permite liberarse de restricciones impuestas por las mediciones proyectivas, y con esto se pueden analizar situaciones donde medir más de una vez afecta el sistema. Hasta ahora se ha introducido el formalismo del operador densidad, y explicando cómo puede sustituir el vector de estado. Pero no se ha exhibido su poder en casos donde el vector de estado no dice mucho. La siguiente sección desarrollará un método bastante importante en el caso de sistema entrelazados. Este método será central en el análisis subsiguiente sobre el entrelazamiento y mecánica estadística.
 
 \subsection{Operador de Densidad Reducido}
 
-Ahora se puede plantear la siguiente situación: se tiene un sistema $A$ que está correlacionado cuánticamente  con el sistema $B$. Esto quiere decir que el sistema completo $AB$ puede estar dado por un estado puro pero aún así no se puede describir individualmente el sistema $A$, entonces si solo se tiene acceso al sistema $A$ pero no al $B$, cómo se puede modelar matemáticamente toda la información que es posible de extraer solo de mediciones locales en $A$. Aquí se usa el operador densidad reducido, este se define así
+Ahora se plantea la siguiente situación: se tiene un sistema $A$ que está correlacionado cuánticamente  con el sistema $B$. Esto quiere decir que el sistema completo $AB$ puede estar dado por un estado puro pero aún así no se puede describir individualmente el sistema $A$, entonces si solo se tiene acceso al sistema $A$ pero no al $B$, cómo se puede modelar matemáticamente toda la información que es posible de extraer solo de mediciones locales en $A$. Aquí se usa el operador densidad reducido, este se define así
 \begin{equation}
 \rho_{A} \equiv \Tr_{B}(\rho_{AB}).
 \end{equation}
@@ -86,11 +97,11 @@ Con esto y siguiendo el ejemplo anterior se puede demostrar que  \cite{Decoheren
 \begin{equation}
 \langle M \rangle = \Tr(\rho M)=\Tr_{i}(\rho_{i} M_{i}).
 \end{equation}
-Entonces si se conoce el estado del sistema total y solo se puede hacer mediciones en un subsistema aún así gracias al formalismo del operador densidad se puede encontrar las estadísticas de las mediciones. Es importante aclarar que aunque se tenga un operador de densidad reducido para el sistema $A$ no significa que se haya descrito el sistema de manera individual. Esto es solo una herramienta matemática para poder sacar las estadísticas de las mediciones.
+Entonces si se conoce el estado del sistema total y solo se puede hacer mediciones en un subsistema aún así gracias al formalismo del operador densidad se puede encontrar las estadísticas de las mediciones. Es importante aclarar que aunque se tenga un operador de densidad reducido para el sistema $A$ no significa que se haya descrito el sistema de manera individual. Esto es solo una herramienta matemática para poder sacar las estadísticas de las mediciones. Se vio el poder que tiene el formalismo del operador densidad pero aún se puede construir más en base a este. La siguiente sección espera formular una pregunta que se responderá usando las herramientas cuánticas mostradas hasta ahora.
 \subsection{Distancia de Traza}
-Las herramientas hasta ahora mostradas han sido impulsadas por una pregunta que se necesitaba responder pero que tenía una respuesta única. Ahora se encuentra con la pregunta ¿ qué tan cercanos están dos estado cuánticos?. La respuesta a esta pregunta puede ser dada por varias definiciones de distancias pero la que se usará acá será la distancia de traza.
+Los métodos usados, generalmente en física, son impulsados por preguntas con única respuesta. Ahora se encuentra con la pregunta ¿ qué tan cercanos están dos estado cuánticos? La respuesta a esta pregunta puede ser dada por varias definiciones de distancias, pero la que se usará acá será la distancia de traza.
 \\
-Una pregunta relacionada con la cercanía de los estados cuánticos es la de ¿ qué quiere decir que dos informaciones sean similares?. En la teoría clásica de la información esto recae en poder diferenciar dos distribuciones de probabilidad. Pero como ya se había advertido esta respuesta no es única, existen diferentes medidas como la fidelidad o la distancia de Kullback–Leibler. Dependiendo del fin es deseable una a las otras.
+Una pregunta relacionada con la cercanía de los estados cuánticos es la de ¿ qué quiere decir que dos informaciones sean similares? En la teoría clásica de la información esto recae en poder diferenciar dos distribuciones de probabilidad. Pero como ya se había advertido esta respuesta no es única, existen diferentes medidas como la fidelidad o la distancia de Kullback–Leibler. Dependiendo del fin es deseable una a las otras.
 \\
 Se tienen dos distribuciones de probabilidad $\{ p_{x} \}$ y $\{ q_{x} \}$. La distancia de  traza clásica viene dada por:
 \begin{equation}
@@ -147,33 +158,34 @@ se usó la relación de completitud de los elementos de POVM. Por otro lado si s
 \end{proof}
 
 Entonces se puede decir que si dos operadores de densidad son cercanos, según la distancia de traza, cualquier medición hecha en este estado cuántico dará una distribución de probabilidad la cual estará cercana, en el sentido clásico de la distancia de traza. También se puede ver como el límite superior a la distancia de traza entre las distribuciones de probabilidad que se encuentran al medir esos estados cuánticos.
-
-
-La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos \cite{CallenThermo}. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas . Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos \cite{TodaStat}. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
 \\
-La mecánica estadística tiene como base el postulado de probabilidades iguales; este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al comparar sus resultados teóricos con los experimentales, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han podido ser unificados. En este capítulo se expondrá cómo Popescu et al. en \cite{Popescu2006} muestran una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico, al poner el entrelazamiento cuántico como nuevo cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad, gracias a esto se puede ver un fundamento más claro y sólido. 
-\\
-Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
-\\
+La distancia de traza es la forma en la que se dará un sentido de lejanía entre estados cuánticos. Es una herramienta que permitirá decir que tan lejos un estado está lejos de ser un estado canónico; punto fundamental 	en el artículo de Popescu et al para especificar, que casi todos los estados son cercanos al estado canónico. Ya con las herramientas en su lugar se pasa en la siguiente sección a plantear la situación de interés.
 
 \section{Definiciones}
-
-Antes de seguir sería preciso dar la notación que se usará a lo largo de este capítulo y el siguiente. Cuando se tenga un sistema cuántico grande descrito por un espacio de Hilbert $\mathcal{H}$  este se llamará el universo. Este universo será dividido en  dos subsistemas. El primero se llamará el sistema $S$  y el segundo se le dará el nombre de ambiente $E$, en ocasiones $S$ se le dirá subsistema y $E$ se le podrá llamar baño estos nombres son equivalentes a los anteriores. Esto lleva a descomponer $\mathcal{H}$ como $\mathcal{H}=\mathcal{H}_{S} \otimes \mathcal{H}_{E}$, con dimensiones $d_{S}$ y $d_{E}$ respectivamente, se supone que la dimensión del ambiente es mucho mayor que la del sistema. Para evitar espacios de dimensión infinita se introduce un tope para altas energías y así mantener la dimensión finita. Además se eliminarían términos de interacción del Hamiltoniano que lo lleven a subespacios no permitidos. Aún no se ha especificado nada sobre el subsistema o el ambiente (Excepto las proporciones de sus dimensiones)  esto permite decir que cualquier descomposición del espacio de Hilbert especifica un subsistema y un baño. El subsistema S puede ser cualquier cosa desde una partícula hasta el conjunto de partículas distribuidas por todo el baño.
+Como lo que se estudiará es un sistema cuántico aislado compuesto por subsistema y ambiente. Es preciso dar la notación que se usará a lo largo de este capítulo y el siguiente, para no tener ambigüedades. Entonces, se tomará una pausa,en esta sección, para dejar la notación clara.
 \\
-El estado global puro del universo se escribirá como $\ket{\phi(t)}$ en un tiempo t y su matriz de densidad se escribirá $\rho(t)=\ket{\phi(t)}\bra{\phi(t)}$. El estado del sistema se encontrará al hacer una traza parcial del ambiente sobre el estado del universo $\rho_{S}= \Tr _{B} \rho(t)$; similarmente el estado del ambiente está dado por $\rho_{B}=\Tr _{S} \rho(t)$ \cite{WildeInformation}. El promedio temporal del universo es:
+Al tener un sistema cuántico grande descrito por un espacio de Hilbert $\mathcal{H}$ este se llamará el universo. El universo, puede ser dividido en dos subsistemas. El primero se llamará el sistema $S$  y el segundo se le dará el nombre de ambiente $E$, se supone que la dimensión del ambiente es mucho mayor que la del sistema. En ocasiones $S$ se le dirá subsistema y $E$ se le podrá llamar baño estos nombres son equivalentes a los anteriores. Esto lleva a descomponer $\mathcal{H}$ como $\mathcal{H}=\mathcal{H}_{S} \otimes \mathcal{H}_{E}$, con dimensiones $d_{S}$ y $d_{E}$ respectivamente. 
+\\
+Para evitar espacios de dimensión infinita se introduce un tope para altas energías y así mantener la dimensión finita. Además, se eliminarían términos de interacción del Hamiltoniano que lo lleven a subespacios no permitidos.  No se ha especificado nada sobre el subsistema o el ambiente (Excepto las proporciones de sus dimensiones)  esto permite decir que cualquier descomposición del espacio de Hilbert especifica un subsistema y un baño. El subsistema $S$ puede ser cualquier cosa desde una partícula hasta el conjunto de partículas distribuidas por todo el baño.
+\\
+El estado global puro del universo se escribirá como $\ket{\phi(t)}$ en un tiempo $t$ y su matriz de densidad se escribirá $\rho(t)=\ket{\phi(t)}\bra{\phi(t)}$. El estado del subsistema se encontrará al hacer una traza parcial del ambiente sobre el estado del universo $\rho_{S}= \Tr _{B} \rho(t)$; similarmente el estado del ambiente está dado por $\rho_{B}=\Tr _{S} \rho(t)$ \cite{WildeInformation}. 
+\\
+El promedio temporal del universo es:
 \begin{equation}
-\omega= \langle \rho(t) \rangle= \lim_{\tau \to \infty} \frac{1}{\tau} \int_{0}^{\tau} \rho (t)dt
+\omega= \langle \rho(t) \rangle_{t}= \lim_{\tau \to \infty} \frac{1}{\tau} \int_{0}^{\tau} \rho (t)dt
 \end{equation}
-de manera análoga $\omega_{S}$ y $\omega_{B}$ son el promedio temporal para el sistema y el ambiente respectivamente \cite{TodaStat}. También se tiene el promedio $\langle . \rangle_{\phi}$ que es sobre todos los estados $\ket{\phi} \in \mathcal{H}_{R}$ de acuerdo a la medida estándar (unitariamente invariante). Esta medida se usa para hallar volúmenes de conjuntos de estados.
-
-\section{Idea Conceptual}
-
-Este nuevo tratamiento de los fundamentos de la mecánica estadística se tiene un universo. Dando como condición que el ambiente sea los suficientemente grande. Este universo está descrito por un estado cuántico puro (se conoce el estado de manera exacta) que obedece una restricción global. Se plantea que el sistema alcanza el equilibrio térmico por medio de la interacción mutua (termalización) es producto del entrelazamiento del sistema y el ambiente  \cite{Popescu2006}. Lo que se presentará más adelante es una definición más rigurosa que ayudará a dar cotas para la expresión "ambiente suficientemente grande".Esta idea permite formular un principio canónico general: el sistema estará termalizado para casi todos los estados puros del universo. esto es soportado por límites cuantitativos. La restricción que se impone no es una específica, esto generaliza los resultados tradicionales dados en la literatura donde se toma por restricción la energía \cite{KardarStat}.
+de manera análoga $\omega_{S}$ y $\omega_{B}$ son el promedio temporal para el sistema y el ambiente respectivamente \cite{TodaStat}. También se tiene el promedio $\langle \cdot \rangle_{\phi}$ que es sobre todos los estados $\ket{\phi} \in \mathcal{H}_{R}$ de acuerdo a la medida estándar (unitariamente invariante). Esta medida se usa para hallar volúmenes de conjuntos de estados.
 \\
-Ya poniendo lo dicho en un contexto un poco más matemático y siguiendo a Popescu et al. se supone tener un universo asilado y bastante grande este tiene dos partes el sistema $S$ y el ambiente $E$. La dimensión del ambiente es mucho más grande que la del sistema. Además se le impone una restricción global al universo llamada $R$. Desde la mecánica cuántica esto puede ponerse como restricciones en el espacio de Hilbert, restricción de los estados posibles:
+Este notación se usará de aquí en adelante. Es una notación usada generalmente por la literatura pero hay detalles que es mejor especificar.
+\section{Idea Conceptual}
+En esta parte se dará la idea central del artículo de Popescu et al. Para empezar este nuevo tratamiento de los fundamentos de la mecánica estadística, se supone que se tiene un sistema cuántico aislado, el universo. Separando el universo en dos subsistemas, el subsistema y el ambiente, y dando como condición que el ambiente sea más grande que el subsistema. Este universo está descrito por un estado cuántico puro que obedece una restricción global, arbitraria por el momento. Se plantea, que el sistema alcanza el equilibrio térmico por medio de la interacción mutua a consecuencia del entrelazamiento del sistema y el ambiente  \cite{Popescu2006}. Lo que se presentará más adelante es una definición más rigurosa que ayudará a dar cotas para la expresión "el ambiente es más grande".
+\\
+Esta idea permite formular un principio canónico general: el sistema estará termalizado para casi todos los estados puros del universo. Esto es soportado por límites cuantitativos. La restricción que se impone no es una específica, esto generaliza los resultados tradicionales dados en la literatura donde se toma por restricción la energía \cite{KardarStat}.
+\\
+Ya poniendo lo dicho en un contexto un poco más matemático y siguiendo a Popescu et al, el universo asilado y bastante grande tiene dos partes el sistema $S$ y el ambiente $E$. La dimensión del ambiente es mucho más grande que la del sistema. Además se le impone una restricción global al universo llamada $R$. Desde la mecánica cuántica esto puede ponerse como restricciones en el espacio de Hilbert, restricción de los estados posibles:
 
 \begin{equation}
-\mathcal{H}_{R}\subseteq \mathcal{H}_{S}\otimes \mathcal{H}_{E},
+\mathcal{H}_{R}\subseteq \mathcal{H}_{S}\otimes \mathcal{H}_{E}.
 \end{equation}
 
 Donde $\mathcal{H}_{S}$ y $\mathcal{H}_{E}$ son los espacios de Hilbert del sistema y el ambiente con dimension $d_{S}$  y $d_{E}$ respectivamente. Es bueno recalcar que $R$ es una restricción arbitraria generalmente se toma como la energía del universo. Ahora se define el estado equiprobable del universo bajo $R$ como:
@@ -206,7 +218,7 @@ Por consiguiente para casi todos los estados puros del universo $\ket{\phi} \in 
 
 \section{Formulación Matemática}
 
-Hasta ahora no se han entrado en los detalles ni en qué significa bastante pequeño o bastante grandes, ni tampoco se ha demostrado el principio general canónico. En esta sección se orientará en los detalles matemáticos, las herramientas usadas y la demostración de los teoremas que Popescu et. al siguienron. En la siguiente sección se dará una perspectiva más física a lo hecho aquí.
+Hasta ahora no se han entrado en los detalles ni en qué significa bastante pequeño o bastante grandes, ni tampoco se ha demostrado el principio general canónico. En esta sección se orientará en los detalles matemáticos, las herramientas usadas y la demostración de los teoremas que Popescu et al siguieron. En la siguiente sección se dará una perspectiva más física a lo hecho aquí.
 \\
 Para empezar se debe decir cuál será la distancia que usaremos para darle un sentido de cercanía a los estados $\rho_{S}$ y $\Omega_{S}$. La distancia a usar es una bastante conocida en la teoría cuántica de la información, la distancia de traza \cite{NielsenInformation}. Esta se define como:
 \begin{equation}
@@ -238,7 +250,6 @@ Donde
 \eta'=2\exp (-C d_{R} \epsilon^{2} ).
 \end{equation}
 
-
 y las constantes son: $ C=(18 \pi^{3})^{-1}, d_{R} = \dim \mathcal{H}_{R}, d_{S} = \dim \mathcal{H}_{S} $. $d_{E}^{eff}$ es la medida efectiva del tamaño del ambiente,
 \begin{equation}
 d_{E}^{eff}= \frac{1}{\Tr \Omega_{E}^{2}} \ge \frac{d_{R}}{d_{S}}.
@@ -246,10 +257,12 @@ d_{E}^{eff}= \frac{1}{\Tr \Omega_{E}^{2}} \ge \frac{d_{R}}{d_{S}}.
 
 Donde $\Omega_{E}= \Tr_{S} \mathcal{E}_{R}$. Ambas cantidades $\eta $ y $\eta'$ serán pequeñas esto implica que el estado estará cercano al estado canónico con alta probabilidad cuando la dimensión efectiva del ambiente sea mucho más grande que la del sistema ( es decir $d_{E}^{eff} >> d_{S}$) y  $d_{R}\epsilon^2>>1>>\epsilon$. Esta última condición se puede asegurar cuando el espacio accesible total es grande ( es decir $d_{R}>>1$), escogiendo $\epsilon=d_{R}^{-\frac{1}{3}}$.\\
 \end{theorem}
+Esta es la formulación matemática de la perspectiva de Popescu et al. El teorema anterior sintetiza, que la probabilidad de encontrar estados del subsistema que sean lejanos del estado canónico decae de manera exponencial con el tamaño del sistema. Por lo tanto el teorema formaliza qué significa que el ambiente deba ser muy grande. Además permite decir con seguridad que los estados que están lejanos del canónico son extremadamente raros de encontrar, no son genéricos.
+\\
 
 \subsection{Lema de Levy} \label{ levy}
-Para poder demostrar el teorema \ref{teorema principal} se usará  el lema de Levy \cite{Lema}. Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
-
+Para poder demostrar el teorema \ref{teorema principal} se puede hacer de dos formas \cite{Popescu2006}, pero se seguirá la que usa el lema de Levy. Este lema dice, que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente  \cite{Lema}:
+\\
 \begin{lemma} \label{lemma de levy}
 
 Dada una función $f: \mathbb{S}^d \to \mathbb{R} $ definida en la hiperesfera d-dimensional $\mathbb{S}^d$ , y un punto $\phi \in \mathbb{S}^d $ es escogido de manera uniformemente aleatoria,
@@ -339,7 +352,9 @@ o sea
 |f(\phi_{1})-f(\phi_{2})| \le  2|\ket{\phi}-\ket{\phi}|,
 \end{equation}
 
-Con esto se muestra que $\eta \le 2$.\\
+Con esto se muestra que $\eta \le 2$.
+\\
+Visto que el lema de Levy se puede usar para estados cuánticos, el trabajo más pesado ya sido hecho por este lema. Ahora se debe acoplar con la idea del principio general canónico, lo cual se seguirá haciendo en la próxima subsección.
 
 \subsection{Demonstración del Principio General Canónico}
 En esta parte se dará una demostración matemática explícita del principio general canónico usando el lema de Levy se entrará en los detalles matemáticos de usar este lema y las cotas adicionales que se necesitan para poder llegar al teorema \ref{teorema principal}. Habiendo dado una cota para $\eta$ ahora se puede usar por completo el lema \ref{lemma de levy} para la función $f(\phi)=\norm{\rho_{S} -\Omega_{S}}_{1}$ recordando que se reemplazará $d$ en el lema por $d=2d_{R}-1$.Tomando la parte derecha de la desigualdad de \ref{lemma de levy}  y sustituyendo la dimensión se tiene:
