--- a/main.tex
+++ b/main.tex
@@ -107,7 +107,12 @@
 %----------------------------------------------------------------------------------------
 
 \thispagestyle{empty}
-\textit{"la frase "}
+\vspace*{8em}
+\textit{"Y así pensé yo que las ciencias de los libros, por lo menos aquellas cuyas razones son sólo probables y carecen de demostraciones, habiéndose compuesto y aumentado poco a poco con las opiniones de varias personas diferentes, no son tan próximas a la verdad como los simples razonamientos que un hombre de buen sentido puede hacer... "}
+\begin{flushright}
+René Descartes
+\end{flushright}
+
 
 %\vspace*{\fill}
 %\begingroup
@@ -148,8 +153,9 @@ RESUMEN
 
 
 \chapter*{Agradecimientos}
-\markboth{AGRADECIMIENTOS23}{AGRADECIMIENTOS} % encabezado 
-Gracias a mis padres.
+Agradezco a mi padre que me ha apoyado en todos mis proyecto confiando en mí y dándome la fortaleza necesaria para las situaciones complicadas. También, siento mucha gratitud hacía mi madre que con su energía y alegría ha hecho de la vida un paseo muy colorido. De la misma manera, hay muchas personas que saben lo importante que son para mí y han hecho de este viaje muy ameno. Estoy muy agradecido con mi asesor Alonso Botero por su orientación.
+%\markboth{INTRODUCCIÓN}{AGRADECIMIENTOS} % encabezado 
+
 
 
 
@@ -190,8 +196,8 @@ Gracias a mis padres.
 %\thispagestyle{empty}
 \include{Capitulos/cap3}
 \thispagestyle{empty}
-%\include{Capitulos/Conclusiones}
-%\thispagestyle{empty}
+\include{Capitulos/Conclusiones}
+\thispagestyle{empty}
 
 
 
@@ -227,7 +233,7 @@ Gracias a mis padres.
 \bibitem{Goldstein} Goldstein, S., Lebowitz, J., Tumulka, R., \& Zanghì, N. (2006). Canonical Typicality. Physical Review Letters, 96(5). http://dx.doi.org/10.1103/physrevlett.96.050403
 \bibitem{LandauStat} Landau, L., Lifshits, E., Pitaevskii, L., Sykes, J., \& Kearsley, M. (1980). Statistical physics. Amsterdam: Elsevier Butterworth Heinemann.
 \bibitem{KardarStat}Kardar, M. (2007). cStatistical physics of particles. Cambridge: Cambridge University Press.
-\bibitem{PathriaStat}Pathria, R., \& Beale, P. (2012). Statistical mechanics. Beijing: World Publishing Corporation.
+\bibitem{Pathria	Stat}Pathria, R., \& Beale, P. (2012). Statistical mechanics. Beijing: World Publishing Corporation.
 \bibitem{HuangStat}Huang, K. (2005). Statistical mechanics. New York [u.a.]: Wiley.
 \bibitem{Decoherence}Schlosshauer, M. (2010). Decoherence and the quantum-to-classical transition. Berlin: Springer.
 \bibitem{CallenThermo}Callen, H. (1975). Thermodynamics. New York [etc.]: Wiley.
